force-app/main/default/objects/Consensus__c/Consensus__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Consensus</label>
</CustomObject>