force-app/main/default/objects/Consensus__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>TextArea</type>
</CustomField>