force-app/main/default/objects/Consensus__c/fields/eFax__c.field-meta.xml
<CustomField>
    <fullName>eFax__c</fullName>
    <label>eFax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>