force-app/main/default/objects/Consensus__c/fields/J2_Address__c.field-meta.xml
<CustomField>
    <fullName>J2_Address__c</fullName>
    <label>J2 Address</label>
    <type>TextArea</type>
</CustomField>