force-app/main/default/objects/Consensus__c/fields/J2_State__c.field-meta.xml
<CustomField>
    <fullName>J2_State__c</fullName>
    <label>J2 State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>