force-app/main/default/objects/Consensus__c/fields/J2_Street__c.field-meta.xml
<CustomField>
    <fullName>J2_Street__c</fullName>
    <label>J2 Street</label>
    <length>25</length>
    <type>Text</type>
</CustomField>