force-app/main/default/objects/Consensus__c/fields/J2TaxID__c.field-meta.xml
<CustomField>
    <fullName>J2TaxID__c</fullName>
    <label>J2TaxID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>