force-app/main/default/objects/Consensus__c/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <label>Routing #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>